updated gnome extensions config

--- a/confs/gnome-extensions.conf
+++ b/confs/gnome-extensions.conf
@@ -1,35 +1,34 @@
-[aztaskbar]
-clock-position-offset=0
-dance-urgent=true
-desaturation-factor=0.0
-icon-padding-horizontal=6
-icon-size=20
-icon-style='REGULAR'
-indicator-color-use-system-accent-color=true
-indicator-location='BOTTOM'
-intellihide=false
-main-panel-height=(true, 34)
-multi-window-indicator-style='MULTI_DASH'
-notification-badges=true
-panel-location='TOP'
-panel-transparent-in-overview=false
-position-offset=1
-prefs-visible-page=''
-show-apps-button=(false, 0)
-show-panel-activities-button=true
-unity-badges=false
-unity-progress-bars=false
-update-notifier-project-version=34
 
 [vitals]
+alphabetize=true
+battery-slot=3
 fixed-widths=true
 hide-icons=false
-hot-sensors=['_memory_usage_', '__network-rx_max__', '__temperature_avg__', '_processor_usage_']
+hot-sensors=['_processor_usage_', '_memory_usage_', '__temperature_avg__', '_system_threads_total_']
 icon-style=1
+include-public-ip=false
 menu-centered=true
+position-in-panel=2
+show-battery=false
 show-fan=false
-show-network=false
+show-network=true
 show-storage=false
 show-voltage=false
 update-time=2
 use-higher-precision=false
+
+[Bluetooth-Battery-Meter]
+circle-widget-color=1
+circle-widget-custom-colors=['#ff7800', '#ff7800', '#15c931', '#15c931', '#15c931', '#15c931', '#15c931', '#15c931', '#15c931', '#15c931']
+device-list=["{\"path\":\"/org/bluez/hci0/dev_DC_C4_9C_70_02_4F\",\"icon\":\"earbuds\",\"alias\":\"Aldisti's Buds FE\",\"paired\":true,\"battery-reported\":true,\"qs-level\":true,\"indicator-mode\":2,\"enhanced-device\":null,\"connected-time\":1758958448,\"disconnected-time\":1758958428}"]
+disable-level-in-icon=false
+enable-airpods-device=false
+enable-battery-indicator-text=false
+enable-gattbas-device=false
+enable-upower-level-icon=false
+indicator-type=2
+level-indicator-color=0
+level-indicator-custom-colors=['#ff7800', '#ff7800', '#15c931', '#15c931', '#15c931', '#15c931', '#15c931', '#15c931', '#15c931', '#15c931']
+level-indicator-type=0
+panel-button-single-indicator=false
+
