updated ghostty config with background image

--- a/confs/ghostty.config
+++ b/confs/ghostty.config
@@ -1,6 +1,7 @@
+
 # Copy to clipboard
 keybind = ctrl+c=copy_to_clipboard
-# Send SIGING signal
+# Send SIGINT signal
 keybind = ctrl+shift+c=text:\x03
 # Paste to clipboard
 keybind = ctrl+v=paste_from_clipboard
@@ -10,9 +11,21 @@ keybind = ctrl+shift+v=unbind
 keybind = ctrl+t=new_tab
 # Close current tab
 keybind = ctrl+w=close_tab
+# Rename tab
+keybind = ctrl+n=prompt_surface_title
 
 # Move inside splitted terminal
 keybind = alt+right=goto_split:right
 keybind = alt+left=goto_split:left
 keybind = alt+up=goto_split:up
 keybind = alt+down=goto_split:down
+
+# Tabs on the top bar
+gtk-titlebar-style=tabs
+
+# Background image
+background-image=/home/aldisti/Pictures/Wallpapers/ghostty-background-1
+background-image-opacity=0.25
+background-image-fit=cover
+background-image-position=bottom-center
+
