added ghostty background image to install script

--- a/confs/ghostty.config
+++ b/confs/ghostty.config
@@ -24,7 +24,7 @@ keybind = alt+down=goto_split:down
 gtk-titlebar-style=tabs
 
 # Background image
-background-image=/home/aldisti/Pictures/Wallpapers/ghostty-background-1
+background-image=~/.config/ghostty/background.png
 background-image-opacity=0.25
 background-image-fit=cover
 background-image-position=bottom-center
